[level 3] Title: 양과 늑대, Time: 7.88 ms, Memory: 80.3 MB -BaekjoonHub